@@ -1,4 +1,5 @@
 - version: unreleased
+- Student can view grades
 - Fixed course admin creation form(@Chino96)
 - grades upload resopnses to Google Cloud(@Chino96)
 - Finished grade model(@Chino96)
